--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
     <section>
       <h2>Things I Like</h2>
       <ul>
-        <li>Fill</li>
-        <li>This</li>
-        <li>In</li>
+        <li>Video Game</li>
+        <li>Carnival</li>
+        <li>Cooking</li>
       </ul>
     </section>
 
     <section>
       <h2>Things I Don't Like</h2>
       <ul>
-        <li>Video Game</li>
-        <li>Sport</li>
-        <li>Carnival</li>
-        <li>Cooking</li>
+        <li>Unfairness</li>
+        <li>Cocky person</li>
+        <li>Being trapped</li>
       </ul>
     </section>
   </body>
